# drf_homework1

./: .coverage  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
courses/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_course_stripe_product_id_lesson_stripe_product_id.py  0004_course_stripe_price_id_lesson_stripe_price_id.py
users/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: adddefaultmoderator.py  adddefaultvalues.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_payment_options.py  0003_subscription.py  0004_payment_payment_url.py  0005_alter_payment_summ.py  0006_alter_payment_summ.py
